# keurocalc

./: .gitlab-ci.yml  .kde-ci.yml  AUTHORS  CMakeLists.txt  INSTALL  Makefile.am  TODO  calculator.ui  config-keurocalc.h.cmake  configure.in.in  currencies.cpp  currencies.h  currencies.xml  keurocalc.cpp  keurocalc.desktop  keurocalc.h  main.cpp  preferences.cpp  preferences.h  settingsdialog.ui  snapcraft.yaml
curconvd/: API.txt  CMakeLists.txt  Messages.sh  converter.cpp  converter.h  main.cpp  org.kde.curconvd.appdata.xml  org.kde.curconvd.desktop  org.kde.curconvd.service.in  table.cpp  table.h  test.sh
currencies/: currencies.cpp  currencies.h  currencies.xml
doc/: CMakeLists.txt  Makefile.am  index.docbook
keurocalc/: CMakeLists.txt  Messages.sh  calculator.ui  currencies2rc.xslt  keurocalc.cpp  keurocalc.desktop  keurocalc.h  main.cpp  org.kde.keurocalc.appdata.xml  org.kde.keurocalc.desktop  preferences.cpp  preferences.h  settingsdialog.ui  test.sh
po/ar/: curconvd.po  keurocalc.po
po/bg/: curconvd.po  keurocalc.po
po/br/: keurocalc.po
po/bs/: curconvd.po  keurocalc.po
po/ca/: curconvd.po  keurocalc.po
po/ca/docs/keurocalc/: index.docbook
po/ca@valencia/: curconvd.po  keurocalc.po
po/cs/: curconvd.po  keurocalc.po
po/da/: curconvd.po  keurocalc.po
po/da/docs/keurocalc/: index.docbook
po/de/: curconvd.po  keurocalc.po
po/de/docs/keurocalc/: index.docbook
po/el/: curconvd.po  keurocalc.po
po/en_GB/: curconvd.po  keurocalc.po
po/eo/: curconvd.po  keurocalc.po
po/es/: curconvd.po  keurocalc.po
po/es/docs/keurocalc/: index.docbook
po/et/: curconvd.po  keurocalc.po
po/et/docs/keurocalc/: index.docbook
po/eu/: curconvd.po  keurocalc.po
po/fi/: curconvd.po  keurocalc.po
po/fr/: curconvd.po  keurocalc.po
po/fr/docs/keurocalc/: index.docbook
po/ga/: curconvd.po  keurocalc.po
po/gl/: curconvd.po  keurocalc.po
po/he/: curconvd.po  keurocalc.po
po/hi/: curconvd.po  keurocalc.po
po/hr/: curconvd.po  keurocalc.po
po/hu/: curconvd.po  keurocalc.po
po/ia/: curconvd.po  keurocalc.po
po/is/: curconvd.po  keurocalc.po
po/it/: curconvd.po  keurocalc.po
po/it/docs/keurocalc/: index.docbook
po/ja/: curconvd.po  keurocalc.po
po/ka/: curconvd.po  keurocalc.po
po/km/: curconvd.po
po/ko/: curconvd.po  keurocalc.po
po/lt/: curconvd.po  keurocalc.po
po/mai/: keurocalc.po
po/ml/: curconvd.po
po/mr/: curconvd.po  keurocalc.po
po/ms/: curconvd.po
po/nb/: curconvd.po  keurocalc.po
po/nb/docs/keurocalc/: index.docbook
po/nds/: curconvd.po  keurocalc.po
po/nl/: curconvd.po  keurocalc.po
po/nl/docs/keurocalc/: index.docbook
po/nn/: curconvd.po  keurocalc.po
po/pa/: curconvd.po  keurocalc.po
po/pl/: curconvd.po  keurocalc.po
po/pt/: curconvd.po  keurocalc.po
po/pt/docs/keurocalc/: index.docbook
po/pt_BR/: curconvd.po  keurocalc.po
po/pt_BR/docs/keurocalc/: index.docbook
po/ro/: curconvd.po  keurocalc.po
po/ru/: curconvd.po  keurocalc.po
po/sa/: curconvd.po  keurocalc.po
po/sk/: curconvd.po  keurocalc.po
po/sl/: curconvd.po  keurocalc.po
po/sl/docs/keurocalc/: index.docbook
po/sr/: curconvd.po  keurocalc.po
po/sr@ijekavian/: curconvd.po  keurocalc.po
po/sr@ijekavianlatin/: curconvd.po  keurocalc.po
po/sr@latin/: curconvd.po  keurocalc.po
po/sv/: curconvd.po  keurocalc.po
po/sv/docs/keurocalc/: index.docbook
po/ta/: keurocalc.po
po/tr/: curconvd.po  keurocalc.po
po/ug/: curconvd.po  keurocalc.po
po/uk/: curconvd.po  keurocalc.po
po/uk/docs/keurocalc/: index.docbook
po/zh_CN/: curconvd.po  keurocalc.po
po/zh_TW/: curconvd.po  keurocalc.po
